--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
@@ -46,7 +46,7 @@
     "framer-motion": "^11.2.12",
     "genkit": "^1.13.0",
     "lucide-react": "^0.475.0",
-    "next": "14.2.3",
+    "next": "^15.0.0",
     "next-pwa": "^5.6.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
