--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "genkit": "^1.13.0",
     "lucide-react": "^0.475.0",
     "next": "^15.0.0",
+    "papaparse": "^5.4.1",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -61,6 +62,7 @@
   "devDependencies": {
     "@types/google.maps": "^3.55.11",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/wav": "^1.0.3",
