--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,6 +1,12 @@
 # Settings to manage and configure a Firebase App Hosting backend.
 # https://firebase.google.com/docs/app-hosting/configure
 
+# Specifies the Dockerfile to use for building the container image.
+build:
+  builder: docker
+  dockerfile: Dockerfile
+
+# runConfig settings are now managed within the Dockerfile/container.
 runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
