I have added the docekrfile to the project but I dont see a Backend Secr

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,13 +1,15 @@
 # Settings to manage and configure a Firebase App Hosting backend.
 # https://firebase.google.com/docs/app-hosting/configure
-
-# Specifies the Dockerfile to use for building the container image.
 build:
   builder: docker
   dockerfile: Dockerfile
-
-# runConfig settings are now managed within the Dockerfile/container.
 runConfig:
-  # Increase this value if you'd like to automatically spin up
-  # more instances in response to increased traffic.
   maxInstances: 1
+# Define the secrets that the application needs at build and run time.
+# You must add the values for these secrets in the Firebase Console
+# in your App Hosting backend's "Settings" tab.
+secrets:
+  - secret: GOOGLE_SERVER_API_KEY
+  - secret: NEXT_PUBLIC_SUPABASE_URL
+  - secret: NEXT_PUBLIC_SUPABASE_ANON_KEY
+  - secret: NEXT_PUBLIC_GOOGLE_CLIENT_API_KEY
