what do you mean re-deploy application? How do I do it?

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,9 @@
-.dockerignore
 Dockerfile
-.env
-.env*.local
-.git
-.gitignore
-.next
-.vscode
+.dockerignore
 node_modules
+npm-debug.log
 README.md
+.next
+.git
+.env
+.env.local
