--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,9 +1,23 @@
+# Specifies the version of the App Hosting schema.
+specVersion: v1alpha1
+
+# Defines the build configuration.
 build:
+  # Use Docker to build the app.
   builder: docker
   dockerfile: Dockerfile
+  # Secrets needed during the build process (e.g., for NEXT_PUBLIC_ variables).
+  secrets:
+    - GOOGLE_SERVER_API_KEY
+    - NEXT_PUBLIC_SUPABASE_URL
+    - NEXT_PUBLIC_SUPABASE_ANON_KEY
+    - NEXT_PUBLIC_GOOGLE_CLIENT_API_KEY
 
+# Defines the runtime configuration.
 run:
+  # Number of instances to run.
   instanceCount: 1
+  # Secrets needed when the app is running.
   secrets:
     - GOOGLE_SERVER_API_KEY
     - NEXT_PUBLIC_SUPABASE_URL
