--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "framer-motion": "^11.2.12",
     "genkit": "^1.13.0",
     "lucide-react": "^0.475.0",
-    "next": "^15.0.0",
+    "next": "14.2.4",
     "papaparse": "^5.4.1",
     "patch-package": "^8.0.0",
-    "react": "^18.3.1",
+    "react": "18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
