--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.13.0",
-    "@genkit-ai/next": "^1.13.0",
+    "@genkit-ai/googleai": "1.11.0",
     "@googlemaps/js-api-loader": "^1.16.6",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -37,6 +34,8 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@supabase/ssr": "^0.4.0",
+    "@supabase/supabase-js": "^2.45.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -44,7 +43,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "framer-motion": "^11.2.12",
-    "genkit": "^1.13.0",
+    "genkit": "1.11.0",
     "lucide-react": "^0.475.0",
     "next": "14.2.4",
     "papaparse": "^5.4.1",
@@ -66,7 +65,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/wav": "^1.0.3",
-    "genkit-cli": "^1.13.0",
+    "genkit-cli": "1.11.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
